--- a/index.qmd
+++ b/index.qmd
@@ -42,7 +42,7 @@ code-overflow: wrap
 code-line-numbers: false
 code-block-font-size: "0.85em"
 
-bibliography: ../../references.bib
+#bibliography: ../../references.bib
 ---
 
 ## Background and Goals
@@ -505,7 +505,7 @@ end
 Now we compare the delta method and QQ-mapping approaches to understand their strengths and limitations.
 
 ::: {.callout-important}
-## Instructions
+## Answers to Questions
 
 Create a single figure showing monthly mean temperature for the near-term period (2020-2040) using all four approaches:
 
@@ -591,7 +591,7 @@ Write brief responses (2-3 sentences each) to the following questions:
 
 1. **Method selection:** If you were providing climate data to support a decision about urban heat management in Boston, which bias correction method would you recommend and why?
 
-2. **Appropriateness of QQ-mapping:** In the @ines_biascorrection:2006 paper we discussed, QQ-mapping was used to correct both the *frequency* and *intensity* of rainfall for crop modeling. For temperature data, does it make sense to correct the full distribution? Why or why not? When might the delta method be more appropriate than QQ-mapping?
+2. **Appropriateness of QQ-mapping:** In the Ines paper we discussed, QQ-mapping was used to correct both the *frequency* and *intensity* of rainfall for crop modeling. For temperature data, does it make sense to correct the full distribution? Why or why not? When might the delta method be more appropriate than QQ-mapping?
 :::
 
 #### Method Selection for Urban Heat Management
@@ -602,11 +602,9 @@ We're hoping for temperatures to change over time, so I'd recommend Quantile-Qua
 
 In the paper, if the frequency of rainfall events is too high, then events below a certain threshold are discarded, and QQ-mapping is performed on the events above that threshold. 
 
-This wouldn't make sense for temperature, because temperature is not an event that happens only on certain days, like rainfall. There's no such thing as a "no temperature day" the way that there is a "no rain day". If we got rid of temperature measurements above or below a certain threshold, we wouldn't be correcting for the frequency of anything, we'd just now have days with no temperature.  This is why it makes sense to correct the full distribution for temperature. 
+This wouldn't make sense for temperature, because temperature is not an event that happens only on certain days, like rainfall. There's no such thing as a "no temperature day" the way that there is a "no rainfall day". If we got rid of temperature measurements above or below a certain threshold, we wouldn't be correcting for the frequency of anything, we'd just now have days with no temperature.  This is why it makes sense to correct the full distribution for temperature. 
 
 The delta method might be more appropriate than QQ-mapping when a constant gap is a good representation of the bias in your model, or in your measurements. For example, if you're simulating tidal data, and your model is consistently under or over-estimating by the same values, or you want to adjust your pre-exisiting accurate model to a new, higher or lower guage location. 
 
 ## References
-
-::: {#refs}
-:::
+- currently not working, bib file is missing.
